# lazy-typr

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cog.toml  renovate.json  rustfmt.toml  setup.sh  ydotoold.service_user_example
.cargo-husky/hooks/: pre-commit
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/release/: SKILL.md
.github/workflows/: bump.yml  ci.yml  release.yml
docs/plans/: 2026-03-06-cicd-design.md  2026-03-06-fix-shutdown-hang.md  2026-03-06-fix-wtype-availability-design.md  2026-03-06-fix-wtype-availability.md  2026-03-06-github-actions-cicd.md  2026-03-07-branch-flow.md  2026-03-07-ci-dedup-design.md  2026-03-07-ci-dedup-implementation.md  2026-03-07-cocogitto-design.md  2026-03-07-cocogitto-implementation.md  2026-03-07-gpu-acceleration-design.md  2026-03-07-gpu-acceleration.md  2026-03-07-pre-commit-formatting-design.md  2026-03-07-pre-commit-formatting-implementation.md  2026-03-08-gpu-device-selection-design.md  2026-03-08-gpu-device-selection-implementation.md  2026-03-08-gpu-vulkan-design.md  2026-03-08-gpu-vulkan-implementation.md  2026-03-08-issue-1b-silence-ms-implementation.md  2026-03-08-qa-findings-fix-design.md  2026-03-08-qa-findings-fix-implementation.md  2026-03-08-transcribe-default-design.md  2026-03-08-webrtc-vad-design.md  2026-03-08-webrtc-vad-implementation.md  2026-03-08-ydotool-backend-design.md  2026-03-08-ydotool-backend-impl.md  2026-03-08-ydotool-backend.md  2026-03-09-ci-paths-allowlist-implementation.md  2026-03-10-cuda-support-design.md  2026-03-10-cuda-support-plan.md  2026-03-10-transcribe-implementation.md  2026-03-11-translate-flag-design.md  2026-03-11-translate-flag-implementation.md
docs/qa-reviews/: 2026-03-08-ci-plans-only-change.md  2026-03-08-qa-finding.md
src/: cli_overrides.rs  config.rs  gpu.rs  lib.rs  main.rs  ptt.rs  transcriber.rs  typer.rs
src/audio/: mod.rs  vad.rs  webrtc_vad.rs
tests/: cli_config_merge.rs  config_integration.rs  ptt_key_coverage.rs  vad_pipeline.rs
